<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.darzalgames</groupId>
	<artifactId>libgdx-tools</artifactId>
	<version>0.4.0</version>
	<name>libGDX Tools</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>17</maven.compiler.release>
		<libgdx.version>1.12.1</libgdx.version>
		<tommyettinger.version>1.1200.1</tommyettinger.version>
		<libgdx.controllers.version>2.2.3</libgdx.controllers.version>
		<darzalcommon.version>0.5.7</darzalcommon.version>
		<gwt.version>2.10.0</gwt.version>
		<gwt.maven.version>2.10.0</gwt.maven.version>
		<mockito.version>5.15.2</mockito.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>

			<!-- GWT Validation to ensure library is GWT compatible -->
<!--			<plugin>-->
<!--				<groupId>org.codehaus.mojo</groupId>-->
<!--				<artifactId>gwt-maven-plugin</artifactId>-->
<!--				<version>${gwt.maven.version}</version>-->
<!--				<configuration>-->
<!--					<strict>true</strict>-->
<!--					<failOnError>true</failOnError>-->	
<!--					<validateOnly>true</validateOnly>-->
<!--				</configuration>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<goals>-->
<!--							<goal>compile</goal>-->
<!--						</goals>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>
						-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
						-Xshare:off
					</argLine>
				</configuration>
			</plugin>
<!--			<plugin>-->
<!--		        <groupId>org.apache.maven.plugins</groupId>-->
<!--		        <artifactId>maven-failsafe-plugin</artifactId>-->
<!--		        <version>3.5.2</version>-->
<!--		        <executions>-->
<!--		          <execution>-->
<!--		            <goals>-->
<!--		              <goal>integration-test</goal>-->
<!--		              <goal>verify</goal>-->
<!--		            </goals>-->
<!--		          </execution>-->
<!--		        </executions>-->
<!--      		</plugin>-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- Test Dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.0</version>
			<type>pom.sha512</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- Libgdx -->
		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx</artifactId>
			<version>${libgdx.version}</version>
		</dependency>
		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx</artifactId>
			<version>${libgdx.version}</version>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx-platform</artifactId>
			<version>${libgdx.version}</version>
			<classifier>natives-desktop</classifier>
		</dependency>

		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx-backend-lwjgl3</artifactId>
			<version>${libgdx.version}</version>
		</dependency>
		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx-backend-headless</artifactId>
			<version>${libgdx.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.darzalgames</groupId>
			<artifactId>darzal-common</artifactId>
			<version>${darzalcommon.version}</version>
		</dependency>
		<dependency>
			<groupId>com.darzalgames</groupId>
			<artifactId>darzal-common</artifactId>
			<version>${darzalcommon.version}</version>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.code-disaster.steamworks4j</groupId>
			<artifactId>steamworks4j</artifactId>
			<version>1.9.0</version>
		</dependency>

		<dependency>
			<groupId>com.badlogicgames.gdx-controllers</groupId>
			<artifactId>gdx-controllers-core</artifactId>
			<version>${libgdx.controllers.version}</version>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.badlogicgames.gdx-controllers</groupId>
			<artifactId>gdx-controllers-core</artifactId>
			<version>${libgdx.controllers.version}</version>
		</dependency>
		<dependency>
			<groupId>com.badlogicgames.gdx-controllers</groupId>
			<artifactId>gdx-controllers-desktop</artifactId>
			<version>${libgdx.controllers.version}</version>
		</dependency>
		
		<!-- For GWT compliancy verification -->
		<dependency>
			<groupId>org.gwtproject</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
			<scope>provided</scope>
		</dependency>

		
		
		<!-- vvv HERE vvv -->

<!--		<dependency>-->
<!--			<groupId>com.badlogicgames.gdx-controllers</groupId>-->
<!--			<artifactId>gdx-controllers-gwt</artifactId>-->
<!--			<version>${libgdx.controllers.version}</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>com.badlogicgames.gdx-controllers</groupId>-->
<!--			<artifactId>gdx-controllers-gwt</artifactId>-->
<!--			<version>${libgdx.controllers.version}</version>-->
<!--			<classifier>sources</classifier>-->
<!--			<scope>provided</scope>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>com.github.tommyettinger</groupId>-->
<!--			<artifactId>gdx-backend-gwt</artifactId>-->
<!--			<version>${tommyettinger.version}</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>com.github.tommyettinger</groupId>-->
<!--			<artifactId>gdx-backend-gwt</artifactId>-->
<!--			<version>${tommyettinger.version}</version>-->
<!--			<classifier>sources</classifier>-->
<!--			<scope>provided</scope>-->
<!--		</dependency>-->

		<!-- ^^^ HERE ^^^ -->

	</dependencies>

</project>
